Рефакторинг, вывод отзывов на отдельную страницу, поправлены ссылки в layout

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Register">Register</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Feedback" asp-action="Add">Contact us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Feedback" asp-action="Index">Our Feedbacks</a>
                         </li>
                     </ul>
                 </div>
